                included "DataSelectionMenu.h"
                added    ActivateResearcherMenu()
                changed  backLoad()
                changed  activate()
            racestopmenu.cpp
                RmStopRaceMenu()
                    changed  AssistedHuman is a human
            legacymenu/
                CMakeList.txt
                    added    ResearcherMenu.h and .cpp
                    added    DataSelectionMenu.h and .cpp
                    added    backend in both ADD_SDLIB_LIBRARY and ADD_SDLIB_INCLUDEDIR
                mainscreens/mainmenu.cpp
                    included "DataSelectionMenu.h"
                    added    GoBack()
                    changed  MainMenuInit()
                racescreens/
                    racerunningmenus.cpp
                        removed RmProgressiveTimeModifier implementation and calls
                    racestopmenu.cpp
                        removed rmProgressiveTimeModifier.start() call
                confscreens/soundconfig.cpp
                    added ChangeInterventionVolume()
                    added logic to create new controls for intervention volume and store their data
                    changed readSoundCfg()
        graphic/
            ssggraph/
                CMakeLists.txt added connection to frontend module
                grboard.cpp
                    added   grDispIntervention()
                    added   LoadInterventionTextures()
                    changed grInitBoardCar() 
                    changed refreshBoard()
                grboard.h
                    added grDispIntervention()  


  data/
    data/
        CMakeLists.txt
            added intervention folder
        menu/
            mainmenu.xml
                added a back button
            soundconfigmenu.xml
                added controls for intervention sound volume
        
  cmake/
    checks.cmake
        changed IF(OPTION_3RDPARTY_SQLITE3) (removed if)